# ocr-server

./: .cursor-rules  .gitattributes  .gitignore  AGENTS.md  CHANGELOG_FIX.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  TEST_BUILD_GUIDE.md  build-offline-package.sh  build-release-package.sh  build-simple-package.sh  build.rs  clippy.toml  config.example.yaml  config.production.yaml  config.yaml.example  config.yaml.prod  matter_mappings.json  preview-request.json  production-test-request.json  production-verify.sh  qingqiu.json  quick-test.sh  test-concurrency.sh  test-data-url.json  test-data.json  test-document.txt  test-flow.sh  test_build.sh  themes.json
.claude/agents/: code-quality-reviewer.md  fullstack-architect.md  senior-frontend-engineer.md
.cursor/rules/: cursor.rules
build-tools/: obfuscate.js  package.json
config/: config.development.yaml  config.production.template.yaml  config.production.yaml  config.template.yaml  config.yaml  config.yaml.prod  config.yaml.template
config/mappings/: matter-theme-mapping.json
config/rules/: default.json  sample.json
docs/: API_REFACTOR_PLAN.md  BUILD.md  OPERATIONS.md  README.md  api.md
examples/: README.md  config.json  preview-request.json
ocr/: PaddleOCR-json
ocr-conn/: Cargo.toml
ocr-conn/src/: lib.rs  ocr.rs  preprocess.rs
ocr/lib/: libgomp.so.1  libmkldnn.so.0  libonnxruntime.so.1.11.1  libopencv_core.so.410  libopencv_imgcodecs.so.410  libopencv_imgproc.so.410
plans/: 2025-07-20-auth-testing-analysis-v1.md  2025-07-20-comprehensive-project-analysis-v1.md  2025-07-20-detailed-execution-plan-v1.md  2025-07-20-detailed-implementation-guide-v1.md  2025-07-20-frontend-analysis-testing-design-v1.md  2025-07-20-ocr-design-review-v1.md  2025-07-21-current-frontend-implementation-analysis-v1.md  2025-07-21-production-level-page-testing-plan-v1.md  2025-07-21-yjb-frontend-integration-testing-plan-v1.md  2025-07-22-frontend-consistency-analysis-v1.md
scripts/: README.md  build-with-docker.sh  build.sh  ocr-server.sh  package-offline.sh  pre-commit.sh  quality-check.sh  quick-api.sh
src/: build_info.rs  lib.rs  main.rs  main_new.rs
src/api/: auth.rs  config.rs  dynamic_worker_status.rs  enhancement.rs  failover_status.rs  files.rs  meta.rs  mod.rs  monitor_auth.rs  monitor_routes.rs  monitoring.rs  preview.rs  resource_monitoring.rs  rules.rs  test.rs  tracing_api.rs  user_admin.rs  utils.rs  worker_proxy.rs
src/db/: factory.rs  failover.rs  mod.rs  models.rs  sqlite.rs  traits.rs  user_info_traits.rs
src/model/: evaluation.rs  mod.rs  ocr.rs  preview.rs  user.rs  user_info.rs
src/monitor/: api.rs  config.rs  health.rs  metrics.rs  mod.rs  service.rs
src/server/: config.rs  database.rs  http.rs  mod.rs  monitoring.rs  storage.rs
src/storage/: factory.rs  failover.rs  local.rs  mod.rs  oss.rs  traits.rs
static/: README.md  api-test.html  config.js  h5.html  index.html  login.html  monitor-v2.html  monitor.html  test-api-integration.html  test-tools.html
static_backup/: monitoring.html
(+125 files in other folders)
