[package]
name = "ocr-server"
version = "1.4.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "ocr-server"
path = "src/main.rs"

[[bin]]
name = "daily-report"
path = "src/bin/daily_report.rs"

[dependencies]
anyhow = "1"
parking_lot = "0.12"
ocr-conn = { path = "ocr-conn" }

# serde
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time", "env-filter", "json"] }
tracing-appender = "0.2"

# web
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
    "time",
] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.7", features = ["multipart", "macros"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["cors", "fs", "timeout"] }
tower-sessions = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
opendal = { version = "0.50", features = ["services-oss"] }
image = "0.25"
async-nats = { version = "0.35", default-features = false, features = ["ring"] }

# database drivers
rusqlite = { version = "0.32", features = ["bundled"] }

# tool
mime_guess = "2"
urlencoding = "2"
url = "2"
fastdate = "0.3"
time = "0.3"
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
uuid = { version = "1.0", features = ["v4"] }
ring = "0.17"
rand = "0.8"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"  # AES加密库
regex = "1"
zen-engine = "0.29"
build_html = "2"
wkhtmltopdf = "0.4"
shiva = { version = "1", default-features = false, features = ["docx"] }
sysinfo = { version = "0.30", features = ["multithread"] }
once_cell = "1.19"
thiserror = "1.0"
tempfile = "3"
num_cpus = "1"
pdf2image = "0.1"

# database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
async-trait = "0.1"

# 监控模块依赖（可选）
# Optional dependencies for monitoring (only when enabled)
procfs = { version = "0.16", optional = true }
psutil = { version = "3.2", optional = true }
actix-web = { version = "4", optional = true }

# bcrypt for monitor auth
bcrypt = { version = "0.15", optional = true }

[features]
default = ["reqwest"]  # 默认启用HTTP下载功能
monitoring = ["procfs", "psutil", "actix-web", "bcrypt"]
testing = []  # 测试功能特性
dm_go = ["reqwest"]  # Go网关连接（HTTP网关）
production_crypto = []  # 启用生产加密实现的占位特性

[profile.release]
opt-level = 3
lto = "thin"  # 使用 thin LTO 而不是 fat LTO，更兼容
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
chrono = { version = "0.4", features = ["clock"] }
