[package]
name = "ocr-conn"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
pdf2image = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
crossbeam = "0.8"
rayon = "1"
parking_lot = "0.12"
tokio = { version = "1", features = ["sync"] }
num_cpus = "1"
tracing = "0.1"
